tests/snapshots/std140__generate_struct_glsl.snap
---
source: tests/std140.rs
expression: "TestGlsl::glsl_definition()"

---
struct TestGlsl {
	vec3 foo;
	mat2 bar;
};
