tests/snapshots/std140__matrix_uniform_std140-2.snap
---
source: tests/std140.rs
expression: "<MatrixUniform as AsStd140>::Std140Type::glsl_definition()"

---
struct MatrixUniform {
	mat3 e;
	float f;
};
