tests/snapshots/std140__matrix_uniform_std140.snap
---
source: tests/std140.rs
expression: "<<MatrixUniform as AsStd140>::Std140Type as TypeLayout>::type_layout()"

---
name: Std140MatrixUniform
size: 52
alignment: 4
fields:
  - Field:
      name: _MatrixUniform__e__Std140__align
      ty: "[u8 ; _MatrixUniform__e__Std140__align()]"
      size: 0
  - Field:
      name: e
      ty: "< mint :: ColumnMatrix3 < f32 > as :: crevice :: std140 :: AsStd140 > ::\nStd140Type"
      size: 48
  - Field:
      name: _MatrixUniform__f__Std140__align
      ty: "[u8 ; _MatrixUniform__f__Std140__align()]"
      size: 0
  - Field:
      name: f
      ty: "< f32 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 4

