tests/snapshots/std140__matrix_uniform_std430.snap
---
source: tests/std140.rs
expression: "<<MatrixUniform as AsStd430>::Std430Type as TypeLayout>::type_layout()"

---
name: Std430MatrixUniform
size: 52
alignment: 4
fields:
  - Field:
      name: _MatrixUniform__e__Std430__align
      ty: "[u8 ; _MatrixUniform__e__Std430__align()]"
      size: 0
  - Field:
      name: e
      ty: "< mint :: ColumnMatrix3 < f32 > as :: crevice :: std430 :: AsStd430 > ::\nStd430Type"
      size: 36
  - Field:
      name: _MatrixUniform__f__Std430__align
      ty: "[u8 ; _MatrixUniform__f__Std430__align()]"
      size: 12
  - Field:
      name: f
      ty: "< f32 as :: crevice :: std430 :: AsStd430 > :: Std430Type"
      size: 4

