tests/snapshots/std140__more_than_16_alignment.snap
---
source: tests/std140.rs
expression: "<<MoreThan16Alignment as AsStd140>::Std140Type as TypeLayout>::type_layout()"

---
name: Std140MoreThan16Alignment
size: 32
alignment: 8
fields:
  - Field:
      name: _MoreThan16Alignment__doubles__Std140__align
      ty: "[u8 ; _MoreThan16Alignment__doubles__Std140__align()]"
      size: 0
  - Field:
      name: doubles
      ty: "< DVec4 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 32

