tests/snapshots/std140__point_light.snap
---
source: tests/std140.rs
expression: "<<PointLight as AsStd140>::Std140Type as TypeLayout>::type_layout()"

---
name: Std140PointLight
size: 48
alignment: 4
fields:
  - Field:
      name: _PointLight__position__Std140__align
      ty: "[u8 ; _PointLight__position__Std140__align()]"
      size: 0
  - Field:
      name: position
      ty: "< Vec3 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 12
  - Field:
      name: _PointLight__diffuse__Std140__align
      ty: "[u8 ; _PointLight__diffuse__Std140__align()]"
      size: 4
  - Field:
      name: diffuse
      ty: "< Vec3 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 12
  - Field:
      name: _PointLight__specular__Std140__align
      ty: "[u8 ; _PointLight__specular__Std140__align()]"
      size: 4
  - Field:
      name: specular
      ty: "< Vec3 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 12
  - Field:
      name: _PointLight__brightness__Std140__align
      ty: "[u8 ; _PointLight__brightness__Std140__align()]"
      size: 0
  - Field:
      name: brightness
      ty: "< f32 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 4

