tests/snapshots/std140__primitive_f32.snap
---
source: tests/std140.rs
expression: "<<PrimitiveF32 as AsStd140>::Std140Type as TypeLayout>::type_layout()"

---
name: Std140PrimitiveF32
size: 8
alignment: 4
fields:
  - Field:
      name: _PrimitiveF32__x__Std140__align
      ty: "[u8 ; _PrimitiveF32__x__Std140__align()]"
      size: 0
  - Field:
      name: x
      ty: "< f32 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 4
  - Field:
      name: _PrimitiveF32__y__Std140__align
      ty: "[u8 ; _PrimitiveF32__y__Std140__align()]"
      size: 0
  - Field:
      name: y
      ty: "< f32 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 4

