tests/snapshots/std140__using_vec3_padding.snap
---
source: tests/std140.rs
expression: "<<UsingVec3Padding as AsStd140>::Std140Type as TypeLayout>::type_layout()"

---
name: Std140UsingVec3Padding
size: 16
alignment: 4
fields:
  - Field:
      name: _UsingVec3Padding__pos__Std140__align
      ty: "[u8 ; _UsingVec3Padding__pos__Std140__align()]"
      size: 0
  - Field:
      name: pos
      ty: "< Vec3 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 12
  - Field:
      name: _UsingVec3Padding__brightness__Std140__align
      ty: "[u8 ; _UsingVec3Padding__brightness__Std140__align()]"
      size: 0
  - Field:
      name: brightness
      ty: "< f32 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 4

