tests/snapshots/std140__vec3.snap
---
source: tests/std140.rs
expression: "<<TestVec3 as AsStd140>::Std140Type as TypeLayout>::type_layout()"

---
name: Std140TestVec3
size: 28
alignment: 4
fields:
  - Field:
      name: _TestVec3__pos__Std140__align
      ty: "[u8 ; _TestVec3__pos__Std140__align()]"
      size: 0
  - Field:
      name: pos
      ty: "< Vec3 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 12
  - Field:
      name: _TestVec3__velocity__Std140__align
      ty: "[u8 ; _TestVec3__velocity__Std140__align()]"
      size: 4
  - Field:
      name: velocity
      ty: "< Vec3 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 12

